apps/saleor-dashboard/overlays/prod/patches/resources-patch.yaml
# Resources Patch - Dashboard PROD
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
spec:
  template:
    spec:
      containers:
        - name: dashboard
          resources:
            requests:
              cpu: "200m"
              memory: "1Gi"
            limits:
              cpu: "500m"
              memory: "2Gi"
